// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-9 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-14 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-14 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-14[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-14[aria-disabled='true'] .emotion-19 {
  fill: #e9eaeb;
}

.emotion-14[aria-disabled='true'] .emotion-19 .emotion-21 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]:checked+.emotion-19 {
  fill: #ffd3e3;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]:checked+.emotion-19 .emotion-21 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]+.emotion-19 {
  fill: #ffebf2;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-invalid="true"]+.emotion-19 .emotion-21 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-14[aria-disabled='true'] .emotion-17:checked+.emotion-19 {
  fill: #e5dbfd;
}

.emotion-14[aria-disabled='true'] .emotion-17:checked+.emotion-19 .emotion-21 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-checked="mixed"]+.emotion-19 {
  fill: #e5dbfd;
}

.emotion-14[aria-disabled='true'] .emotion-17[aria-checked="mixed"]+.emotion-19 .emotion-21 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-14 .emotion-17:checked+.emotion-19 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-14 .emotion-17:checked+.emotion-19 .emotion-21 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-14 .emotion-17[aria-invalid="true"]:checked+.emotion-19 .emotion-21 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-14 .emotion-17[aria-checked="mixed"]+.emotion-19 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-14 .emotion-17[aria-checked="mixed"]+.emotion-19 .emotion-21 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='false']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='true']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='false'][aria-checked='mixed']+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true'][aria-checked='false']+.emotion-19 .emotion-21 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true'][aria-checked='true']+.emotion-19 .emotion-21 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-14 .emotion-17[aria-invalid="true"]+.emotion-19 {
  fill: #e51963;
}

.emotion-14 .emotion-17[aria-invalid="true"]+.emotion-19 .emotion-21 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-14 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-16 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-16:not(:disabled) {
  cursor: pointer;
}

.emotion-16:disabled {
  cursor: not-allowed;
}

.emotion-16:not(:disabled):checked+.emotion-19,
.emotion-16:not(:disabled)[aria-checked='mixed']+.emotion-19 {
  fill: #8c40ef;
}

.emotion-16:not(:disabled):checked+.emotion-19 .emotion-21,
.emotion-16:not(:disabled)[aria-checked='mixed']+.emotion-19 .emotion-21 {
  stroke: #8c40ef;
}

.emotion-16:not(:disabled)[aria-invalid='true']+.emotion-19,
.emotion-16:not(:disabled)[aria-invalid='mixed']+.emotion-19 {
  fill: #ffebf2;
}

.emotion-16:not(:disabled)[aria-invalid='true']+.emotion-19 .emotion-21,
.emotion-16:not(:disabled)[aria-invalid='mixed']+.emotion-19 .emotion-21 {
  stroke: #b3144d;
}

.emotion-16:focus+.emotion-19 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-16:focus+.emotion-19 .emotion-21 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 .emotion-21 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-18 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-18 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-20 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-27 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <div
              class="emotion-6 emotion-1"
            >
              <legend
                class="emotion-8 emotion-9 emotion-10"
              >
                Label
              </legend>
            </div>
            <div
              class="emotion-0 emotion-1"
            >
              <div
                aria-disabled="false"
                class="emotion-13 emotion-14 emotion-15"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-16 emotion-17"
                  id="«r1»"
                  name="Checkbox.value-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-18 emotion-19"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-20 emotion-21"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-22 emotion-1"
                >
                  <div
                    class="emotion-24 emotion-1"
                  >
                    <label
                      class="emotion-26 emotion-27 emotion-10"
                      for="«r1»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="emotion-13 emotion-14 emotion-15"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  class="emotion-16 emotion-17"
                  id="«r4»"
                  name="Checkbox.value-2"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-18 emotion-19"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-20 emotion-21"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-22 emotion-1"
                >
                  <div
                    class="emotion-24 emotion-1"
                  >
                    <label
                      class="emotion-26 emotion-27 emotion-10"
                      for="«r4»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-11 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: text;
}

.emotion-13 {
  color: #b3144d;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-18 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-18[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-18[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-18[aria-disabled='true'] .emotion-23 {
  fill: #e9eaeb;
}

.emotion-18[aria-disabled='true'] .emotion-23 .emotion-25 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-18[aria-disabled='true'] .emotion-21[aria-invalid="true"]:checked+.emotion-23 {
  fill: #ffd3e3;
}

.emotion-18[aria-disabled='true'] .emotion-21[aria-invalid="true"]:checked+.emotion-23 .emotion-25 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-18[aria-disabled='true'] .emotion-21[aria-invalid="true"]+.emotion-23 {
  fill: #ffebf2;
}

.emotion-18[aria-disabled='true'] .emotion-21[aria-invalid="true"]+.emotion-23 .emotion-25 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-18[aria-disabled='true'] .emotion-21:checked+.emotion-23 {
  fill: #e5dbfd;
}

.emotion-18[aria-disabled='true'] .emotion-21:checked+.emotion-23 .emotion-25 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-18[aria-disabled='true'] .emotion-21[aria-checked="mixed"]+.emotion-23 {
  fill: #e5dbfd;
}

.emotion-18[aria-disabled='true'] .emotion-21[aria-checked="mixed"]+.emotion-23 .emotion-25 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-18 .emotion-21:checked+.emotion-23 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-18 .emotion-21:checked+.emotion-23 .emotion-25 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-18 .emotion-21[aria-invalid="true"]:checked+.emotion-23 .emotion-25 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-18 .emotion-21[aria-checked="mixed"]+.emotion-23 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-18 .emotion-21[aria-checked="mixed"]+.emotion-23 .emotion-25 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-18:hover[aria-disabled='false'] .emotion-21[aria-invalid='false'][aria-checked='false']+.emotion-23 .emotion-25 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-18:hover[aria-disabled='false'] .emotion-21[aria-invalid='false'][aria-checked='true']+.emotion-23 .emotion-25 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-18:hover[aria-disabled='false'] .emotion-21[aria-invalid='false'][aria-checked='mixed']+.emotion-23 .emotion-25 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-18:hover[aria-disabled='false'] .emotion-21[aria-invalid='true'][aria-checked='false']+.emotion-23 .emotion-25 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-18:hover[aria-disabled='false'] .emotion-21[aria-invalid='true'][aria-checked='true']+.emotion-23 .emotion-25 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-18 .emotion-21[aria-invalid="true"]+.emotion-23 {
  fill: #e51963;
}

.emotion-18 .emotion-21[aria-invalid="true"]+.emotion-23 .emotion-25 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-18 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-20 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-20:not(:disabled) {
  cursor: pointer;
}

.emotion-20:disabled {
  cursor: not-allowed;
}

.emotion-20:not(:disabled):checked+.emotion-23,
.emotion-20:not(:disabled)[aria-checked='mixed']+.emotion-23 {
  fill: #8c40ef;
}

.emotion-20:not(:disabled):checked+.emotion-23 .emotion-25,
.emotion-20:not(:disabled)[aria-checked='mixed']+.emotion-23 .emotion-25 {
  stroke: #8c40ef;
}

.emotion-20:not(:disabled)[aria-invalid='true']+.emotion-23,
.emotion-20:not(:disabled)[aria-invalid='mixed']+.emotion-23 {
  fill: #ffebf2;
}

.emotion-20:not(:disabled)[aria-invalid='true']+.emotion-23 .emotion-25,
.emotion-20:not(:disabled)[aria-invalid='mixed']+.emotion-23 .emotion-25 {
  stroke: #b3144d;
}

.emotion-20:focus+.emotion-23 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-20:focus+.emotion-23 .emotion-25 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-20[aria-invalid='true']:focus+.emotion-23 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-20[aria-invalid='true']:focus+.emotion-23 .emotion-25 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-22 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-22 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-24 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
}

.emotion-31 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <div
              class="emotion-6 emotion-1"
            >
              <div
                class="emotion-8 emotion-1"
              >
                <legend
                  class="emotion-10 emotion-11 emotion-12"
                >
                  CheckboxGroupField events
                </legend>
                <span
                  class="emotion-13 emotion-12"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="emotion-0 emotion-1"
            >
              <div
                aria-disabled="false"
                class="emotion-17 emotion-18 emotion-19"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-20 emotion-21"
                  id="«r9»"
                  name="test.value-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="emotion-22 emotion-23"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-24 emotion-25"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-26 emotion-1"
                >
                  <div
                    class="emotion-28 emotion-1"
                  >
                    <label
                      class="emotion-30 emotion-31 emotion-12"
                      for="«r9»"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="emotion-17 emotion-18 emotion-19"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="emotion-20 emotion-21"
                  id="«rc»"
                  name="test.value-2"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="emotion-22 emotion-23"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <rect
                      class="emotion-24 emotion-25"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="emotion-26 emotion-1"
                >
                  <div
                    class="emotion-28 emotion-1"
                  >
                    <label
                      class="emotion-30 emotion-31 emotion-12"
                      for="«rc»"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
